<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/meeting_subject_text"
            android:textColorHint="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/subjectInput"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeWidth="2dp"
            app:boxStrokeColor="@color/blue_principal"
            app:helperText="14 caractères max."
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/meeting_subject_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLength="14"


                >

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_participants_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/inviter_des_participants"
                android:textColorHint="@color/black"
                android:textAlignment="textStart"
                app:layout_constraintTop_toBottomOf="@+id/subjectInput"
                app:endIconMode="custom"
                app:endIconDrawable="@drawable/ic_baseline_add_circle_24"
                app:endIconTint="@color/red_btn"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxStrokeWidth="2dp"
                app:boxStrokeColor="@color/blue_principal"
                android:layout_marginTop="10dp"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_participants_text_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"

                    >

                </com.google.android.material.textfield.TextInputEditText>


            </com.google.android.material.textfield.TextInputLayout>
        <HorizontalScrollView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/chip_horizontal_scroll"
            app:layout_constraintTop_toBottomOf="@id/add_participants_input_layout">
        <com.google.android.material.chip.ChipGroup
            app:singleLine="true"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/chipGroup"
            android:theme="@style/Theme.MaterialComponents.Light">
    </com.google.android.material.chip.ChipGroup>
        </HorizontalScrollView>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/date_time_meeting_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/chip_horizontal_scroll"
            android:background="@drawable/custom_border"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/start_meeting_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/date_time_meeting_layout"
                android:background="@color/white"
                android:text="@string/debut_date_textview"
                android:paddingStart="5dp"
                android:paddingTop="5dp">

            </TextView>

            <LinearLayout
                android:id="@+id/date_time_start_layout"
                app:layout_constraintTop_toBottomOf="@id/start_meeting_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"

                >

                <Button
                    android:tag="StartDate"
                    android:id="@+id/date_btn_start"
                    android:textColor="@color/black"
                    android:hint="@string/date_start_text"
                    android:textColorHint="@color/black"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".50"
                    android:background="@drawable/btn_shape_rectangle_no_radius"
                    android:textAlignment="textStart"
                    android:onClick="showDatePickerDialog"

                  />

                <Button
                    android:tag="StartTime"
                    android:id="@+id/time_btn_start"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"

                    android:hint="@string/time_start_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".50"
                    android:backgroundTint="@color/white"
                    android:background="@drawable/btn_shape_rectangle_no_radius"
                    android:textAlignment="textStart"
                    android:onClick="showTimePickerDialog"/>

            </LinearLayout>
            <TextView
                android:id="@+id/end_meeting_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/date_time_start_layout"
                android:background="@color/white"
                android:text="@string/end_date_textview"
                android:paddingStart="5dp"
                android:paddingTop="5dp"
                android:layout_marginTop="5dp">

            </TextView>

            <LinearLayout
                android:id="@+id/date_time_end_layout"
                app:layout_constraintTop_toBottomOf="@id/end_meeting_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:tag="EndDate"
                    android:id="@+id/date_btn_end"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:hint="@string/date_end_text"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".50"
                    android:background="@drawable/btn_shape_rectangle_no_radius"
                    android:textAlignment="textStart"
                    android:onClick="showDatePickerDialog"


                    />

                <Button
                    android:tag="EndTime"
                    android:id="@+id/time_btn_end"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:hint="@string/time_end_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".50"
                    android:backgroundTint="@color/white"
                    android:background="@drawable/btn_shape_rectangle_no_radius"
                    android:textAlignment="textStart"
                    android:onClick="showTimePickerDialog"
                    />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
            <Spinner
                android:id="@+id/room_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/room_spinner_hint"
                android:layout_marginTop="10dp"


                android:dropDownSelector="@color/black"
                android:textAlignment="textStart"
                style="@android:style/Widget.Spinner.DropDown"
                android:spinnerMode="dropdown"
                android:background="@drawable/custom_border"
                app:layout_constraintTop_toBottomOf="@+id/date_time_meeting_layout"
                >

            </Spinner>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_meeting_confirmation_btn"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/meeting_create_confirm_btn"
            android:textColor="@color/white"
            app:cornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/room_spinner"
            app:layout_constraintBottom_toBottomOf="parent"
            android:backgroundTint="@color/red_btn"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>