...
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item android:id="@+id/filter_reset"
        android:title="@string/reset_filter_title"
        app:showAsAction="never"/>
    <item android:id="@+id/filter_date"
        android:title="@string/filter_by_date_title"
        app:showAsAction="never" />
    <item android:id="@+id/filter_room"
        android:title="@string/filter_by_room_title"
        app:showAsAction="never">
        <group android:checkableBehavior="single">
            <menu>
                <item android:id="@+id/room_1"
                    android:tag="Room 1"
...
